@@ -35,7 +35,7 @@ public class UsuarioController {
     public String listadoUsuarios(Model model) {
         var lista = usuarioService.getUsuarios();
         model.addAttribute("usuarios", lista);
-        return "/usuario/usuarios";
+        return "usuario/usuarios";
     }
 
     @GetMapping("/agregar")
@@ -84,7 +84,7 @@ public class UsuarioController {
     public String modicarUsuario(Usuario usuario, Model model) {
         usuario = usuarioService.getUsuario(usuario);
 
-        String rol = usuario.getRoles().getFirst().getNombre();
+        String rol = usuario.getRoles().get(0).getNombre();
         String rolSeleccionado;
         switch (rol) {
             case "ADMIN":
